// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with emotion for responsive values 1`] = `
.emotion-0 {
  padding-left: 8px;
  padding-right: 8px;
}

@media (min-width:768px) {
  .emotion-0 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media (min-width:992px) {
  .emotion-0 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  className="emotion-0"
>
  Hello
</div>
`;

exports[`works with emotion for single value 1`] = `
.emotion-0 {
  padding-left: 8px;
  padding-right: 8px;
}

<div
  className="emotion-0"
>
  Hello
</div>
`;
